syntax = "proto3";

option csharp_namespace = "LibplanetConsole.Grpc.Client";

package libplanet.console.client.v1;

import "src/shared/LibplanetConsole.Grpc/Protos/Types.proto";
import "src/shared/LibplanetConsole.Node/Protos/NodeGrpcService.proto";
import "src/shared/LibplanetConsole.Blockchain/Protos/BlockChainGrpcService.proto";

service ClientGrpcService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Start(StartRequest) returns (StartResponse);
  rpc Stop(StopRequest) returns (StopResponse);
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);

  rpc GetEventStream(GetEventStreamRequest) returns (stream GetEventStreamResponse);
}

message ClientInfoProto {
  libplanet.console.types.v1.AddressProto address = 1;
  libplanet.console.node.v1.NodeInfoProto node_info = 2;
  libplanet.console.blockchain.v1.BlockInfoProto tip = 3;
  bool is_running = 5;
}

message PingRequest {
}

message PingResponse {
}

message StartRequest {
  string node_end_point = 1;
}

message StartResponse {
  ClientInfoProto client_info = 1;
}

message StopRequest {
}

message StopResponse {
}

message GetInfoRequest {
}

message GetInfoResponse {
  ClientInfoProto client_info = 1;
}

message StartedEvent {
  ClientInfoProto client_info = 1;
}

message StoppedEvent {
}

message GetEventStreamRequest {
}

message GetEventStreamResponse {
  oneof event {
    StartedEvent started = 1;
    StoppedEvent stopped = 2;
  }
}
